--- a/episodes/season_01.yml
+++ b/episodes/season_01.yml
@@ -8,6 +8,7 @@ episodes:
   disneyplus_id: 79529cd0-f1cf-4eec-8b1d-ea1e1b76043b
   simpsonsworld_id: 273376835817
   good: false
+  guest_stars:
   characters:
     - homer
 - title: Bart The Genius
@@ -18,6 +19,7 @@ episodes:
   disneyplus_id: 250ca502-751e-4b37-a465-f8b518d76ced
   simpsonsworld_id: 283744835990
   good: false
+  guest_stars:
   characters:
     - bart
 - title: Homer's Odyssey
@@ -28,6 +30,7 @@ episodes:
   disneyplus_id: 0e8e7f27-0ab2-495f-8254-d99d3c53ce4f
   simpsonsworld_id: 273381443699
   good: false
+  guest_stars:
   characters:
     - homer
 - title: There's No Disgrace Like Home
@@ -39,6 +42,7 @@ episodes:
   disneyplus_id: 5e837a36-5db0-451c-82d3-0cca1490f784
   simpsonsworld_id: 273392195780
   good: true
+  guest_stars:
   characters:
     - simpsons
     - homer
@@ -50,6 +54,7 @@ episodes:
   disneyplus_id: 051c32fc-0d9a-4bee-a960-9c6ab85eccdb
   simpsonsworld_id: 300934723994
   good: false
+  guest_stars:
   characters:
     - bart
     - grandpa_simpson
@@ -60,6 +65,7 @@ episodes:
   disneyplus_id: d7502c3a-a254-451a-bdc0-b57e67b1ace4
   simpsonsworld_id: 273391683535
   good: false
+  guest_stars:
   characters:
     - lisa
     - bleeding_gums_murphy
@@ -71,6 +77,7 @@ episodes:
   disneyplus_id: 8d4aad23-2222-4980-af9b-729bc8159898
   simpsonsworld_id: 273396803837
   good: false
+  guest_stars:
   characters:
     - homer
     - bart
@@ -82,6 +89,7 @@ episodes:
   disneyplus_id: 8868eddb-224d-4df4-93c2-145abd60270d
   simpsonsworld_id: 305663555641
   good: true
+  guest_stars:
   characters:
     - bart
     - bullies
@@ -93,6 +101,7 @@ episodes:
   disneyplus_id: 6303b4c8-5e65-46a0-bd51-6460bba86e8e
   simpsonsworld_id: 280384579592
   good: false
+  guest_stars:
   characters:
     - marge
 - title: Homer's Night Out
@@ -104,6 +113,7 @@ episodes:
   disneyplus_id: 084078a6-9f7e-4468-8b33-48ce7fb5c7c0
   simpsonsworld_id: 275197507879
   good: false
+  guest_stars:
   characters:
     - homer
     - marge
@@ -115,6 +125,7 @@ episodes:
   disneyplus_id: 01937c40-fe95-4e8f-aa0d-3933ee3ba378
   simpsonsworld_id: 306382403766
   good: true
+  guest_stars:
   characters:
     - bart
 - title: Krusty Gets Busted
@@ -125,6 +136,7 @@ episodes:
   disneyplus_id: 829bc530-f7b3-459d-bac1-dc92672c9138
   simpsonsworld_id: 288019523914
   good: true
+  guest_stars:
   characters:
     - krusty
     - sideshow_bob
@@ -136,5 +148,6 @@ episodes:
   disneyplus_id: 332f91c5-2de7-40d2-ac02-9de76820f4f6
   simpsonsworld_id: 274504771647
   good: false
+  guest_stars:
   characters:
     - simpsons
