--- a/episodes/season_02.yml
+++ b/episodes/season_02.yml
@@ -7,6 +7,7 @@ episodes:
   disneyplus_id: 4050d194-f1a6-47d4-bc1b-76b8245ed113
   simpsonsworld_id: 260539459671
   good: false
+  guest_stars:
   characters:
     - bart
 - title: Simpson and Delilah
@@ -17,6 +18,7 @@ episodes:
   disneyplus_id: 243f60de-a36e-49ad-add0-dfc14531cafd
   simpsonsworld_id: 260539971564
   good: true
+  guest_stars:
   characters:
     - homer
 - title: Treehouse of Horror
@@ -27,6 +29,7 @@ episodes:
   disneyplus_id: 4ec3dd31-0428-40c2-b1e0-b052dfc53fe0
   simpsonsworld_id: 260538435884
   good: true
+  guest_stars:
   characters:
     - treehouse_of_horror
 - title: Two Cars in Every Garage and Three Eyes on Every Fish
@@ -37,6 +40,7 @@ episodes:
   disneyplus_id: de06551c-30d7-44ef-b000-05e29c00eed6
   simpsonsworld_id: 260537411822
   good: true
+  guest_stars:
   characters:
     - homer
     - marge
@@ -48,6 +52,7 @@ episodes:
   disneyplus_id: ebf614c8-eefe-4cc3-8b26-d898f40faad0
   simpsonsworld_id: 260538435888
   good: true
+  guest_stars:
   characters:
     - homer
 - title: Dead Putting Society
@@ -58,6 +63,7 @@ episodes:
   disneyplus_id: 142af74a-1149-493c-ad2b-a283c98db66d
   simpsonsworld_id: 260539459670
   good: true
+  guest_stars:
   characters:
     - bart
     - homer
@@ -70,6 +76,7 @@ episodes:
   disneyplus_id: f4dc6ce1-cb9d-49e3-b4d4-2e5f50549812
   simpsonsworld_id: 260539459701
   good: false
+  guest_stars:
   characters:
     - bart
     - lisa
@@ -81,6 +88,7 @@ episodes:
   disneyplus_id: 9f790394-88b9-48ac-970c-18d32de46342
   simpsonsworld_id: 260539459702
   good: true
+  guest_stars:
   characters:
     - bart
 - title: Itchy and Scratchy and Marge
@@ -91,6 +99,7 @@ episodes:
   disneyplus_id: fd366e91-bcd5-4629-83d9-6c6f6739897c
   simpsonsworld_id: 1094123075920
   good: true
+  guest_stars:
   characters:
     - marge
 - title: Bart Gets Hit by a Car
@@ -101,6 +110,7 @@ episodes:
   disneyplus_id: bf571705-b52b-46ae-a9c1-c88d36672839
   simpsonsworld_id: 260550723760
   good: true
+  guest_stars:
   characters:
     - bart
     - homer
@@ -113,6 +123,7 @@ episodes:
   disneyplus_id: 28244e58-a5dd-4260-a8be-13e2a34d0ba9
   simpsonsworld_id: 260548675839
   good: true
+  guest_stars:
   characters:
     - homer
 - title: The Way We Was
@@ -123,6 +134,7 @@ episodes:
   disneyplus_id: 1fd08344-aa39-42f3-a056-662aa4835f0f
   simpsonsworld_id: 260549187876
   good: false
+  guest_stars:
   characters:
     - homer
     - marge
@@ -134,6 +146,7 @@ episodes:
   disneyplus_id: fb653641-23b8-4e9b-a547-0d195f78c33c
   simpsonsworld_id: 260820547692
   good: true
+  guest_stars:
   characters:
     - homer
     - lisa
@@ -145,6 +158,7 @@ episodes:
   disneyplus_id: ce071635-1151-49b0-9168-eda9b55880fa
   simpsonsworld_id: 263496771968
   good: true
+  guest_stars:
   characters:
     - homer
     - skinner
@@ -157,6 +171,7 @@ episodes:
   disneyplus_id: 78ae94ea-6ac6-4d34-b1a9-031a324f447a
   simpsonsworld_id: 1094123587812
   good: false
+  guest_stars:
   characters:
     - homer
 - title: Bart's Dog Gets an F
@@ -167,6 +182,7 @@ episodes:
   disneyplus_id: ab2e3441-cb90-4cee-ab57-6f20fa1bfdac
   simpsonsworld_id: 272034883946
   good: true
+  guest_stars:
   characters:
     - bart
     - santas_little_helper
@@ -177,6 +193,7 @@ episodes:
   disneyplus_id: b847307a-cb9d-494a-bb98-12a764168288
   simpsonsworld_id: 263504963955
   good: false
+  guest_stars:
   characters:
     - grandpa_simpson
 - title: Brush with Greatness
@@ -188,6 +205,7 @@ episodes:
   disneyplus_id: 8cf507bf-2b25-45d7-84d4-e3f668a68f37
   simpsonsworld_id: 1094212163883
   good: true
+  guest_stars:
   characters:
     - marge
     - mr_burns
@@ -199,6 +217,7 @@ episodes:
   disneyplus_id: 33c5ea7a-09ac-4513-b471-29289dbbc1f9
   simpsonsworld_id: 288011331912
   good: true
+  guest_stars:
   characters:
     - lisa
 - title: The War of the Simpsons
@@ -210,6 +229,7 @@ episodes:
   disneyplus_id: ac3d5ea1-e473-4a79-bfaf-a496a79b2a3b
   simpsonsworld_id: 272040003661
   good: true
+  guest_stars:
   characters:
     - marge
     - homer
@@ -221,6 +241,7 @@ episodes:
   disneyplus_id: a1394377-1c23-458d-b91b-18ff12018d47
   simpsonsworld_id: 310368835964
   good: true
+  guest_stars:
   characters:
     - bart
     - milhouse
@@ -233,6 +254,7 @@ episodes:
   disneyplus_id: cd94c4b6-8f87-4df0-b709-190eb4f84964
   simpsonsworld_id: 272041539932
   good: true
+  guest_stars:
   characters:
     - homer
     - mr_burns
