--- a/episodes/season_03.yml
+++ b/episodes/season_03.yml
@@ -9,6 +9,7 @@ episodes:
   disneyplus_id: not-ported-over
   simpsonsworld_id: 272234051980
   good: false
+  guest_stars:
   characters:
     - homer
     - bart
@@ -20,6 +21,7 @@ episodes:
   disneyplus_id: 30e6b625-ad02-4c52-ba41-571b68eee431
   simpsonsworld_id: 275196995796
   good: true
+  guest_stars:
   characters:
     - lisa
 - title: When Flanders Failed
@@ -30,6 +32,7 @@ episodes:
   disneyplus_id: bba00c31-32ab-4167-9990-d44ca856fb77
   simpsonsworld_id: 272051267562
   good: true
+  guest_stars:
   characters:
     - homer
     - flanders
@@ -41,6 +44,7 @@ episodes:
   disneyplus_id: 062bfbc7-f1ac-4c7f-9ccc-bd2e96fd6da4
   simpsonsworld_id: 288015427922
   good: true
+  guest_stars:
   characters:
     - bart
     - fat_tony
@@ -52,6 +56,7 @@ episodes:
   disneyplus_id: 03be2e07-7414-436a-9522-e697bd015483
   simpsonsworld_id: 256843843704
   good: true
+  guest_stars:
   characters:
     - homer
 - title: Like Father, Like Clown
@@ -62,6 +67,7 @@ episodes:
   disneyplus_id: 27977583-ce54-45e5-8c9e-3ea55d551a3e
   simpsonsworld_id: 256874051703
   good: true
+  guest_stars:
   characters:
     - bart
     - lisa
@@ -74,6 +80,7 @@ episodes:
   disneyplus_id: 1d2183e7-f0c6-4b61-abd7-47688dccfd15
   simpsonsworld_id: 272054339616
   good: true
+  guest_stars:
   characters:
     - treehouse_of_horror
 - title: Lisa's Pony
@@ -84,6 +91,7 @@ episodes:
   disneyplus_id: 9ce55c08-4635-4cc8-857c-081460a2480e
   simpsonsworld_id: 310374467809
   good: false
+  guest_stars:
   characters:
     - homer
     - lisa
@@ -95,6 +103,7 @@ episodes:
   disneyplus_id: b1ecdef1-ffef-4cb1-b7cc-3980a258cc69
   simpsonsworld_id: 256898115598
   good: true
+  guest_stars:
   characters:
     - bart
     - homer
@@ -106,6 +115,7 @@ episodes:
   disneyplus_id: 796cd258-4056-43ab-9268-4932550f11f5
   simpsonsworld_id: 305663555961
   good: true
+  guest_stars:
   characters:
     - homer
     - moe
@@ -117,6 +127,7 @@ episodes:
   disneyplus_id: dd37faf9-f191-4a97-99c4-2cf7e966e441
   simpsonsworld_id: 310380099512
   good: false
+  guest_stars:
   characters:
     - homer
 - title: I Married Marge
@@ -127,6 +138,7 @@ episodes:
   disneyplus_id: e7a09c16-34cd-448d-89c8-3a7cd3f1db05
   simpsonsworld_id: 299618371603
   good: false
+  guest_stars:
   characters:
     - homer
     - marge
@@ -139,6 +151,7 @@ episodes:
   disneyplus_id: 4b6bb3d5-cf1f-4edc-a1f5-b619c5d5979f
   simpsonsworld_id: 272052803895
   good: true
+  guest_stars:
   characters:
     - bart
 - title: Lisa the Greek
@@ -149,6 +162,7 @@ episodes:
   disneyplus_id: f4faa613-2619-484b-b9d5-84cb7907b60e
   simpsonsworld_id: 273404483565
   good: true
+  guest_stars:
   characters:
     - homer
     - lisa
@@ -160,6 +174,7 @@ episodes:
   disneyplus_id: affe697b-246e-4e2b-b314-86abb18f51f3
   simpsonsworld_id: 272224835795
   good: false
+  guest_stars:
   characters:
     - marge
     - simpsons
@@ -171,6 +186,7 @@ episodes:
   disneyplus_id: 8e541791-0374-4447-92d5-427e190347c0
   simpsonsworld_id: 272228931984
   good: true
+  guest_stars:
   characters:
     - bart
     - edna
@@ -183,6 +199,7 @@ episodes:
   disneyplus_id: 277c0f29-5036-4ec1-8730-346b62202ec9
   simpsonsworld_id: 310380099768
   good: true
+  guest_stars:
   characters:
     - homer
     - mr_burns
@@ -194,6 +211,7 @@ episodes:
   disneyplus_id: 84689699-9a61-4873-9e97-b92fdfdfd912
   simpsonsworld_id: 263513155607
   good: true
+  guest_stars:
   characters:
     - bart
     - lisa
@@ -205,6 +223,7 @@ episodes:
   disneyplus_id: 2d3ca633-e681-408d-b43a-17d34c4e3429
   simpsonsworld_id: 274404419620
   good: true
+  guest_stars:
   characters:
     - simpsons
     - santas_little_helper
@@ -215,6 +234,7 @@ episodes:
   disneyplus_id: dd81dd22-a6d1-490b-9e4d-86b5bf64e2b0
   simpsonsworld_id: 272215619762
   good: true
+  guest_stars:
   characters:
     - homer
 - title: Black Widower
@@ -225,6 +245,7 @@ episodes:
   disneyplus_id: d5a7bef2-e845-4439-916e-121bb33838c4
   simpsonsworld_id: 272221251812
   good: true
+  guest_stars:
   characters:
     - selma
     - sideshow_bob
@@ -236,6 +257,7 @@ episodes:
   disneyplus_id: 97b16e5f-ef0a-4bdb-b113-e8ceb248217a
   simpsonsworld_id: 279103043694
   good: true
+  guest_stars:
   characters:
     - otto
     - bart
@@ -247,6 +269,7 @@ episodes:
   disneyplus_id: 44f88f5f-ef09-4102-a975-4cc963938ec3
   simpsonsworld_id: 280393283967
   good: true
+  guest_stars:
   characters:
     - bart
     - milhouse
@@ -258,6 +281,7 @@ episodes:
   disneyplus_id: 7262519a-bba5-44c2-a547-2c812ed2541d
   simpsonsworld_id: 279098435798
   good: false
+  guest_stars:
   characters:
     - homer
     - maggie
