--- a/episodes/season_05.yml
+++ b/episodes/season_05.yml
@@ -8,6 +8,7 @@ episodes:
   disneyplus_id: 39346307-4dbb-45e8-a765-4ed555bb1e03
   simpsonsworld_id: 305674307809
   good: false
+  guest_stars:
   characters:
     - homer
     - barney
@@ -20,6 +21,7 @@ episodes:
   disneyplus_id: 1640880f-154b-4c5e-94fe-cb86bb7e6970
   simpsonsworld_id: 305674819788
   good: true
+  guest_stars:
   characters:
     - bart
     - sideshow_bob
@@ -31,6 +33,7 @@ episodes:
   disneyplus_id: 166f1ff9-be98-453d-a3cd-6d80943efff3
   simpsonsworld_id: 280399427649
   good: true
+  guest_stars:
   characters:
     - homer
 - title: Rosebud
@@ -40,6 +43,7 @@ episodes:
   disneyplus_id: 39559a2c-6bec-48fc-b080-be4a7c3e4045
   simpsonsworld_id: 279714371653
   good: true
+  guest_stars:
   characters:
     - mr_burns
     - homer
@@ -51,6 +55,7 @@ episodes:
   disneyplus_id: 33dfa7a1-fe6f-4466-a87d-9bf43a8be7cd
   simpsonsworld_id: 275206211805
   good: true
+  guest_stars:
   characters:
     - treehouse_of_horror
 - title: Marge on the Lam
@@ -61,6 +66,7 @@ episodes:
   disneyplus_id: fd7b6365-b333-487e-8057-66544129d162
   simpsonsworld_id: 294777411510
   good: true
+  guest_stars:
   characters:
     - marge
 - title: Bart's Inner Child
@@ -71,6 +77,7 @@ episodes:
   disneyplus_id: eed49f33-ea03-401f-9afa-abc8591c290d
   simpsonsworld_id: 275202627817
   good: true
+  guest_stars:
   characters:
     - bart
 - title: Boy-Scoutz 'N the Hood
@@ -81,6 +88,7 @@ episodes:
   disneyplus_id: 01cec0e3-c895-478a-ac26-e90a34cf7c32
   simpsonsworld_id: 288056387698
   good: true
+  guest_stars:
   characters:
     - bart
     - homer
@@ -93,6 +101,7 @@ episodes:
   disneyplus_id: 53840a89-3296-4b9d-bbbd-cb80eba9af3f
   simpsonsworld_id: 275201091952
   good: true
+  guest_stars:
   characters:
     - homer
 - title: "$pringfield (Or, How I Learned to Stop Worrying and Love Legalized Gambling)"
@@ -103,6 +112,7 @@ episodes:
   disneyplus_id: 129fb45a-e1f4-4f42-9abb-cd1e62a91eda
   simpsonsworld_id: 305659459565
   good: true
+  guest_stars:
   characters:
     - marge
     - homer
@@ -114,6 +124,7 @@ episodes:
   disneyplus_id: 3f69d304-f5b4-4b72-aca9-cbc0395a0ee6
   simpsonsworld_id: 305677891810
   good: true
+  guest_stars:
   characters:
     - homer
 - title: Bart Gets Famous
@@ -124,6 +135,7 @@ episodes:
   disneyplus_id: 639a5d21-7c16-43fb-87ce-7df70e57177e
   simpsonsworld_id: 302789187885
   good: true
+  guest_stars:
   characters:
     - bart
     - krusty
@@ -135,6 +147,7 @@ episodes:
   disneyplus_id: ae3d982a-e7ec-43fe-93dd-0884be9d751a
   simpsonsworld_id: 279716931614
   good: false
+  guest_stars:
   characters:
     - homer
     - apu
@@ -145,6 +158,7 @@ episodes:
   disneyplus_id: a4153020-a361-466d-8c1e-dfdc32f43501
   simpsonsworld_id: 274260035625
   good: true
+  guest_stars:
   characters:
     - lisa
 - title: Deep Space Homer
@@ -155,6 +169,7 @@ episodes:
   disneyplus_id: 0743fa0a-ddd3-4591-96f1-1a419e19b30e
   simpsonsworld_id: 275720259883
   good: true
+  guest_stars:
   characters:
     - homer
     - barney
@@ -165,6 +180,7 @@ episodes:
   disneyplus_id: a7f65f67-17f0-483c-bd70-a15d4050d877
   simpsonsworld_id: 310398019629
   good: true
+  guest_stars:
   characters:
     - homer
     - ned
@@ -175,6 +191,7 @@ episodes:
   disneyplus_id: 980ff0ba-e78c-41cf-8e83-5b7a91f4d3c9
   simpsonsworld_id: 275726403611
   good: true
+  guest_stars:
   characters:
     - bart
 - title: Burns' Heir
@@ -184,6 +201,7 @@ episodes:
   disneyplus_id: c4e4a495-db5f-4fee-9314-0866330c664b
   simpsonsworld_id: 283747395787
   good: false
+  guest_stars:
   characters:
 - title: Sweet Seymour Skinner's Baadasssss Song
   season: 5
@@ -193,6 +211,7 @@ episodes:
   disneyplus_id: bedacca5-03b3-4b55-8fa6-7f542cd53e3a
   simpsonsworld_id: 274260035741
   good: true
+  guest_stars:
   characters:
     - bart
     - skinner
@@ -205,6 +224,7 @@ episodes:
   disneyplus_id: b151afad-24f5-457b-9457-26eb53022331
   simpsonsworld_id: 278796355962
   good: true
+  guest_stars:
   characters:
     - bart
     - skinner
@@ -216,6 +236,7 @@ episodes:
   disneyplus_id: e38cf670-0fdc-4ca8-9095-51296ffc7a16
   simpsonsworld_id: 305681987583
   good: true
+  guest_stars:
   characters:
     - grandpa_simpson
     - mr_burns
@@ -228,6 +249,7 @@ episodes:
   disneyplus_id: e38cf670-0fdc-4ca8-9095-51296ffc7a16
   simpsonsworld_id: 279720003973
   good: true
+  guest_stars:
   characters:
     - homer
     - marge
