--- a/episodes/season_07.yml
+++ b/episodes/season_07.yml
@@ -7,6 +7,7 @@ episodes:
   disneyplus_id: af6bd0ea-9f03-4291-9224-de834958b1a1
   simpsonsworld_id: 305689667892
   good: true
+  guest_stars:
   characters:
 - title: Radioactive Man
   season: 7
@@ -16,6 +17,7 @@ episodes:
   disneyplus_id: 2895e8ae-b98c-43e8-8da0-8015832768f6
   simpsonsworld_id: 305693251940
   good: true
+  guest_stars:
   characters:
 - title: Home Sweet Homediddly-Dum-Doodily
   season: 7
@@ -25,6 +27,7 @@ episodes:
   disneyplus_id: 85ae1888-ba11-43e6-a617-badff0685aad
   simpsonsworld_id: 306174019869
   good: true
+  guest_stars:
   characters:
 - title: Bart Sells His Soul
   season: 7
@@ -34,6 +37,7 @@ episodes:
   disneyplus_id: 9168c65f-2ea7-46de-aef9-14c518a5f597
   simpsonsworld_id: 276972099995
   good: true
+  guest_stars:
   characters:
 - title: Lisa the Vegetarian
   season: 7
@@ -42,6 +46,7 @@ episodes:
   disneyplus_id: 18076697-c44b-4d5d-a4cd-e12fe07b924e
   simpsonsworld_id: 276980291592
   good: true
+  guest_stars:
   characters:
 - title: Treehouse of Horror VI
   season: 7
@@ -50,6 +55,7 @@ episodes:
   disneyplus_id: 384c7808-cd8f-4908-a095-c3fedf955d37
   simpsonsworld_id: 310404163601
   good: true
+  guest_stars:
   characters:
     - treehouse_of_horror
 - title: King-Size Homer
@@ -60,6 +66,7 @@ episodes:
   disneyplus_id: 3da929b8-51d7-483b-8007-540faa742efa
   simpsonsworld_id: 294786627843
   good: true
+  guest_stars:
   characters:
 - title: Mother Simpson
   season: 7
@@ -69,6 +76,7 @@ episodes:
   disneyplus_id: 79177d82-52a3-42e0-9f1a-74bebdb70a3b
   simpsonsworld_id: 276983875726
   good: true
+  guest_stars:
   characters:
 - title: Sideshow Bob's Last Gleaming
   season: 7
@@ -78,6 +86,7 @@ episodes:
   disneyplus_id: dd578c4e-b966-4039-9154-c49ebfc3fcc7
   simpsonsworld_id: 302792771516
   good: true
+  guest_stars:
   characters:
 - title: The Simpsons 138th Episode Spectacular
   season: 7
@@ -87,6 +96,7 @@ episodes:
   disneyplus_id: bf91c3f9-c130-4b40-9c0a-d106bee437da
   simpsonsworld_id: 324451395934
   good: true
+  guest_stars:
   characters:
 - title: Marge Be Not Proud
   season: 7
@@ -96,6 +106,7 @@ episodes:
   disneyplus_id: c75d20a0-48e3-4e3f-b420-51b13527decf
   simpsonsworld_id: 305669699710
   good: true
+  guest_stars:
   characters:
 - title: Team Homer
   season: 7
@@ -106,6 +117,7 @@ episodes:
   disneyplus_id: db3b4bed-0e2b-493b-928a-23a8a3b829d2
   simpsonsworld_id: 302792771967
   good: true
+  guest_stars:
   characters:
 - title: Two Bad Neighbors
   season: 7
@@ -115,6 +127,7 @@ episodes:
   disneyplus_id: 6d3f90dd-4441-4a21-873b-2b856aae503c
   simpsonsworld_id: 276994115834
   good: true
+  guest_stars:
   characters:
 - title: Scenes from the Class Struggle in Springfield
   season: 7
@@ -123,6 +136,7 @@ episodes:
   disneyplus_id: 69f3b82f-c910-4c58-a378-cc18fe23587a
   simpsonsworld_id: 305694276001
   good: true
+  guest_stars:
   characters:
 - title: Bart the Fink
   season: 7
@@ -132,6 +146,7 @@ episodes:
   disneyplus_id: 22adc89c-f2e8-4380-9d96-bd10defc0ddd
   simpsonsworld_id: 301346371709
   good: true
+  guest_stars:
   characters:
 - title: Lisa the Iconoclast
   season: 7
@@ -141,6 +156,7 @@ episodes:
   disneyplus_id: 3c98cfc8-ba9f-4dd9-8fdf-9bc0f5f63b8f
   simpsonsworld_id: 302796355658
   good: true
+  guest_stars:
   characters:
 - title: Homer the Smithers
   season: 7
@@ -149,6 +165,7 @@ episodes:
   disneyplus_id: c2fc5c37-1407-47bc-a71a-a6fa30688127
   simpsonsworld_id: 277248579634
   good: true
+  guest_stars:
   characters:
 - title: The Day the Violence Died
   season: 7
@@ -158,6 +175,7 @@ episodes:
   disneyplus_id: cdf89f39-7954-4823-bd0f-e59a508cfd84
   simpsonsworld_id: 301668931982
   good: true
+  guest_stars:
   characters:
 - title: A Fish Called Selma
   season: 7
@@ -166,6 +184,7 @@ episodes:
   disneyplus_id: d479707a-067a-49c9-a707-1360c0e001e1
   simpsonsworld_id: 300935235544
   good: true
+  guest_stars:
   characters:
 - title: Bart on the Road
   season: 7
@@ -176,6 +195,7 @@ episodes:
   disneyplus_id: e79fc0c4-b737-4bdd-b9e3-74228b08850e
   simpsonsworld_id: 277000259951
   good: true
+  guest_stars:
   characters:
 - title: 22 Short Films About Springfield
   season: 7
@@ -185,6 +205,7 @@ episodes:
   disneyplus_id: 7a4eea69-f6f0-4361-a043-0282f15c365a
   simpsonsworld_id: 299588163608
   good: true
+  guest_stars:
   characters:
 - title: Raging Abe Simpson and His Grumbling Grandson in 'The Curse of the Flying
     Hellfish'
@@ -195,6 +216,7 @@ episodes:
   disneyplus_id: 83a53166-960e-4b09-808c-93e6556722bd
   simpsonsworld_id: 279728707597
   good: true
+  guest_stars:
   characters:
 - title: Much Apu About Nothing
   season: 7
@@ -204,6 +226,7 @@ episodes:
   disneyplus_id: 1195725c-d1c9-4ff1-bd37-0c652fda5309
   simpsonsworld_id: 310404675978
   good: true
+  guest_stars:
   characters:
 - title: Homerpalooza
   season: 7
@@ -212,6 +235,7 @@ episodes:
   disneyplus_id: 75b8b572-9e2d-40b5-8424-5b943d15fd75
   simpsonsworld_id: 277008451637
   good: true
+  guest_stars:
   characters:
 - title: Summer of 4 Ft. 2
   season: 7
@@ -221,4 +245,5 @@ episodes:
   disneyplus_id: 964b876c-efaa-483f-bf8b-047187608d95
   simpsonsworld_id: 277013571573
   good: true
+  guest_stars:
   characters:
