--- a/episodes/season_11.yml
+++ b/episodes/season_11.yml
@@ -8,6 +8,7 @@ episodes:
   disneyplus_id: 51a94205-716d-4276-b609-6bee5ae6e993
   simpsonsworld_id: 306906179700
   good: true
+  guest_stars:
   characters:
     - homer
 - title: Brother's Little Helper
@@ -18,6 +19,7 @@ episodes:
   disneyplus_id: 66fa7298-1240-43a9-bb52-a74dc9ad59ee
   simpsonsworld_id: 302833219678
   good: false
+  guest_stars:
   characters:
     - bart
 - title: Guess Who's Coming to Criticize Dinner
@@ -28,6 +30,7 @@ episodes:
   disneyplus_id: a34950c4-0127-4fba-b78a-1bd91e9ce551
   simpsonsworld_id: 306911811691
   good: true
+  guest_stars:
   characters:
     - homer
 - title: Treehouse of Horror X
@@ -39,6 +42,7 @@ episodes:
   disneyplus_id: 763cd9de-443f-443f-8611-1d34a7d719c9
   simpsonsworld_id: 307851843709
   good: true
+  guest_stars:
   characters:
     - treehouse_of_horror
 - title: E-I-E-I-(Annoyed Grunt)
@@ -49,6 +53,7 @@ episodes:
   disneyplus_id: 4e4cc6d6-b29e-4c57-8ce2-4fe36f2b2e5b
   simpsonsworld_id: 302847555697
   good: true
+  guest_stars:
   characters:
 - title: Hello Gutter, Hello Fadder
   season: 11
@@ -58,6 +63,7 @@ episodes:
   disneyplus_id: 676796b5-1bb2-4f80-a6e6-b954950c2c85
   simpsonsworld_id: 294762563857
   good: true
+  guest_stars:
   characters:
     - homer
     - maggie
@@ -68,6 +74,7 @@ episodes:
   disneyplus_id: 634f7da4-8b3a-46c3-b430-76727eb16fef
   simpsonsworld_id: 306920003903
   good: false
+  guest_stars:
   characters:
     - apu
 - title: Take My Wife, Sleaze
@@ -78,6 +85,7 @@ episodes:
   disneyplus_id: 8a0511a7-ba04-4454-b63b-28f8916d677c
   simpsonsworld_id: 301643843522
   good: true
+  guest_stars:
   characters:
     - homer
     - marge
@@ -90,6 +98,7 @@ episodes:
   disneyplus_id: 4dd995c4-c319-418d-99ac-0be2d2687fcc
   simpsonsworld_id: 848995395938
   good: false
+  guest_stars:
   characters:
     - lisa
     - bart
@@ -101,6 +110,7 @@ episodes:
   disneyplus_id: a8d8e5e8-bdb5-4f66-b1cc-de7e0bf648c7
   simpsonsworld_id: 300903491898
   good: true
+  guest_stars:
   characters:
 - title: Faith Off
   season: 11
@@ -109,6 +119,7 @@ episodes:
   disneyplus_id: 3f6ee369-ee77-4e31-8bb4-1db00856908a
   simpsonsworld_id: 300909123775
   good: false
+  guest_stars:
   characters:
 - title: The Mansion Family
   season: 11
@@ -118,6 +129,7 @@ episodes:
   disneyplus_id: 1ea1b7a7-bc53-4895-b7b9-390e6c371fd6
   simpsonsworld_id: 279747651734
   good: true
+  guest_stars:
   characters:
     - simpsons
     - mr_burns
@@ -129,6 +141,7 @@ episodes:
   disneyplus_id: 472ef84f-0b34-4e34-870e-e31843d98194
   simpsonsworld_id: 306926659533
   good: false
+  guest_stars:
   characters:
     - homer
     - bart
@@ -139,6 +152,7 @@ episodes:
   disneyplus_id:
   simpsonsworld_id: 288077891629
   good: false
+  guest_stars:
   characters:
     - homer
     - ned
@@ -150,6 +164,7 @@ episodes:
   disneyplus_id: f40944fc-3c09-48d9-9af7-5be976b9d51c
   simpsonsworld_id: 310458435665
   good: false
+  guest_stars:
   characters:
     - homer
 - title: Pygmoelian
@@ -159,6 +174,7 @@ episodes:
   disneyplus_id: c116ee6a-7621-4cf8-822f-d9de5f159905
   simpsonsworld_id: 294758467783
   good: false
+  guest_stars:
   characters:
     - moe
 - title: Bart to the Future
@@ -170,6 +186,7 @@ episodes:
   disneyplus_id: 3c3bad55-e8a0-402f-a246-5b0d1aefe749
   simpsonsworld_id: 302835267686
   good: true
+  guest_stars:
   characters:
     - bart
     - lisa
@@ -182,6 +199,7 @@ episodes:
   disneyplus_id: 4373fcc9-f26f-4a82-b33c-ee08ccfb1410
   simpsonsworld_id: 306930755636
   good: false
+  guest_stars:
   characters:
     - barney
     - homer
@@ -193,6 +211,7 @@ episodes:
   disneyplus_id: 0d9af443-5878-47d7-85cd-cfbf013953bf
   simpsonsworld_id: 292935747924
   good: false
+  guest_stars:
   characters:
     - simpsons
 - title: Last Tap Dance in Springfield
@@ -204,6 +223,7 @@ episodes:
   disneyplus_id: da2d4067-691f-4445-8a05-73afbded1024
   simpsonsworld_id: 302849091512
   good: true
+  guest_stars:
   characters:
     - lisa
     - bart
@@ -216,6 +236,7 @@ episodes:
   disneyplus_id: 8567caad-39f1-4f5d-9866-2f1540bd9e12
   simpsonsworld_id: 301683779737
   good: true
+  guest_stars:
   characters:
     - marge
 - title: Behind the Laughter
@@ -226,5 +247,6 @@ episodes:
   disneyplus_id: 767915dc-10a7-4a1d-ba3f-65ab847a98fb
   simpsonsworld_id: 279751747780
   good: true
+  guest_stars:
   characters:
     - simpsons
