--- a/episodes/season_14.yml
+++ b/episodes/season_14.yml
@@ -9,6 +9,7 @@ episodes:
   disneyplus_id: 3c929d17-30d3-4f18-887e-af51361b015a
   simpsonsworld_id: 221301315863
   good: true
+  guest_stars:
   characters:
     - treehouse_of_horror
 - title: How I Spent My Strummer Vacation
@@ -20,6 +21,7 @@ episodes:
   disneyplus_id: ced4d9f0-93c2-4832-be02-41bbec25bb81
   simpsonsworld_id: 221293123693
   good: false
+  guest_stars:
   characters:
     - homer
 - title: Bart vs. Lisa vs. 3rd Grade
@@ -30,6 +32,7 @@ episodes:
   disneyplus_id: 87d21214-5742-4f77-89b8-d14d38e73772
   simpsonsworld_id: 221347395722
   good: true
+  guest_stars:
   characters:
 - title: Large Marge
   season: 14
@@ -40,6 +43,7 @@ episodes:
   disneyplus_id: 4c9736ca-bf75-424d-a839-9c954722ed1e
   simpsonsworld_id: 221352515586
   good: false
+  guest_stars:
   characters:
     - marge
     - krusty
@@ -54,6 +58,7 @@ episodes:
   disneyplus_id: d6afb3d4-fad3-4b9d-95f3-4f294c847db1
   simpsonsworld_id: 221388355650
   good: false
+  guest_stars:
   characters:
     - simpsons
 - title: The Great Louse Detective
@@ -64,6 +69,7 @@ episodes:
   disneyplus_id: ae9e9d58-b373-4c0d-857a-42fb7a84a316
   simpsonsworld_id: 221467203550
   good: false
+  guest_stars:
   characters:
     - homer
     - sideshow_bob
@@ -76,6 +82,7 @@ episodes:
   disneyplus_id: 06bec5b1-7e14-4cac-805f-0e0004333f9e
   simpsonsworld_id: 221467715532
   good: true
+  guest_stars:
   characters:
     - skinner
     - edna
@@ -87,6 +94,7 @@ episodes:
   disneyplus_id: 3b28d928-7acf-4429-a0c8-a3b791ff21bc
   simpsonsworld_id: 221531715548
   good: true
+  guest_stars:
   characters:
     - homer
     - lisa
@@ -98,6 +106,7 @@ episodes:
   disneyplus_id: 06fad58a-25d7-40c0-a83d-adcbddc60bce
   simpsonsworld_id: 221532739689
   good: false
+  guest_stars:
   characters:
     - marge
 - title: Pray Anything
@@ -109,6 +118,7 @@ episodes:
   disneyplus_id: 78bd01df-cfb9-4698-9543-1ab60b39316e
   simpsonsworld_id: 221526595805
   good: false
+  guest_stars:
   characters:
     - homer
 - title: Barting Over
@@ -120,6 +130,7 @@ episodes:
   disneyplus_id: a0f86449-2e95-4f93-9530-8583b944153c
   simpsonsworld_id: 221696067841
   good: false
+  guest_stars:
   characters:
     - bart
     - homer
@@ -132,6 +143,7 @@ episodes:
   disneyplus_id: 2bed81b0-4523-43c4-b3f7-b8420f76024b
   simpsonsworld_id: 221698627830
   good: false
+  guest_stars:
   characters:
     - lisa
     - homer
@@ -144,6 +156,7 @@ episodes:
   disneyplus_id: 413584b6-3fc2-4c21-bcd9-19edcb87f17e
   simpsonsworld_id: 221695043703
   good: false
+  guest_stars:
   characters:
     - ned
 - title: Mr. Spritz Goes To Washington
@@ -155,6 +168,7 @@ episodes:
   disneyplus_id: 22618eac-62dd-4e12-96ba-21480c311e01
   simpsonsworld_id: 221699651686
   good: true
+  guest_stars:
   characters:
     - krusty
     - simpsons
@@ -167,6 +181,7 @@ episodes:
   disneyplus_id: 072eac8a-cce2-4eae-ae8e-0b2830c50b21
   simpsonsworld_id: 221696067982
   good: true
+  guest_stars:
   characters:
     - homer
     - mr_burns
@@ -179,6 +194,7 @@ episodes:
   disneyplus_id: 124c3766-ec1a-4c61-85c1-e9dc770a8548
   simpsonsworld_id: 221700675635
   good: false
+  guest_stars:
   characters:
     - lisa
     - bart
@@ -190,6 +206,7 @@ episodes:
   disneyplus_id: 35fdd041-58b4-4a6c-a6a1-a1aa12d2ee9c
   simpsonsworld_id: 221699139984
   good: false
+  guest_stars:
   characters:
     - homer
     - marge
@@ -202,6 +219,7 @@ episodes:
   disneyplus_id: b2674cb0-30d5-4033-85ee-6f92ec4742e9
   simpsonsworld_id: 221700163549
   good: false
+  guest_stars:
   characters:
     - lisa
     - homer
@@ -213,6 +231,7 @@ episodes:
   disneyplus_id: d05adc7d-5679-4d0b-bf54-98ade578f1bd
   simpsonsworld_id: 221701187546
   good: false
+  guest_stars:
   characters:
     - santas_little_helper
 - title: Brake My Wife, Please
@@ -224,6 +243,7 @@ episodes:
   disneyplus_id: 4338a61e-9197-4066-949a-0a11ed4e1105
   simpsonsworld_id: 229724227970
   good: false
+  guest_stars:
   characters:
     - homer
     - marge
@@ -236,6 +256,7 @@ episodes:
   disneyplus_id: 80d14bbb-7b6a-4d67-8c18-9a4ec85fb489
   simpsonsworld_id: 229731395601
   good: false
+  guest_stars:
   characters:
     - bart
 - title: Moe Baby Blues
@@ -247,6 +268,7 @@ episodes:
   disneyplus_id: bbd0d9ff-4b47-4fbd-9df8-cfda37516844
   simpsonsworld_id: 228412483812
   good: true
+  guest_stars:
   characters:
     - moe
     - maggie
