--- a/episodes/season_15.yml
+++ b/episodes/season_15.yml
@@ -9,6 +9,7 @@ episodes:
   disneyplus_id: 5b27c965-12fc-423b-b7b5-84b841d5385a
   simpsonsworld_id: 227335747784
   good: true
+  guest_stars:
   characters:
     - treehouse_of_horror
 - title: My Mother the Carjacker
@@ -20,6 +21,7 @@ episodes:
   disneyplus_id: 5f913e49-20aa-4240-9330-5f561ca09c20
   simpsonsworld_id: 227339843917
   good: true
+  guest_stars:
   characters:
     - grandma_simpson
     - homer
@@ -33,6 +35,7 @@ episodes:
   disneyplus_id: 147d2de9-5e90-40da-9fd9-6b4f1b2efe83
   simpsonsworld_id: 227348035643
   good: false
+  guest_stars:
   characters:
     - lisa
     - skinner
@@ -44,6 +47,7 @@ episodes:
   disneyplus_id: c0e74b7a-439f-4a6a-97c4-2fa2b8a77468
   simpsonsworld_id: 227349059824
   good: false
+  guest_stars:
   characters:
     - simpsons
 - title: The Fat and the Furriest
@@ -55,6 +59,7 @@ episodes:
   disneyplus_id: 44f6459e-2f5f-40a2-935c-ae8816dd7b9b
   simpsonsworld_id: 227355715580
   good: false
+  guest_stars:
   characters:
     - homer
 - title: Today I am a Clown
@@ -66,6 +71,7 @@ episodes:
   disneyplus_id: 7f39669f-3347-401c-ab47-58ee0b88799f
   simpsonsworld_id: 227360323557
   good: false
+  guest_stars:
   characters:
     - krusty
     - homer
@@ -78,6 +84,7 @@ episodes:
   disneyplus_id: 1a35adfe-6cfc-48b5-8bcf-1f2b67935073
   simpsonsworld_id: 227364931670
   good: false
+  guest_stars:
   characters:
     - homer
     - ned
@@ -89,6 +96,7 @@ episodes:
   disneyplus_id: 2eee17ee-617a-4353-8ea8-d8a462a05664
   simpsonsworld_id: 227369027832
   good: false
+  guest_stars:
   characters:
     - marge
 - title: I, (Annoyed Grunt)-Bot
@@ -100,6 +108,7 @@ episodes:
   disneyplus_id: c55c6d82-f03b-4a1e-b11d-d52312afd970
   simpsonsworld_id: 227376707538
   good: false
+  guest_stars:
   characters:
     - homer
     - bart
@@ -112,6 +121,7 @@ episodes:
   disneyplus_id: 80fa3f3a-1fa9-46a3-922d-06e3f1cdfc55
   simpsonsworld_id: 227378755925
   good: true
+  guest_stars:
   characters:
     - homer
     - marge
@@ -124,6 +134,7 @@ episodes:
   disneyplus_id: 4f94a1f6-b11a-4fdf-91b9-23c09fe2e584
   simpsonsworld_id: 227386947567
   good: false
+  guest_stars:
   characters:
     - vignettes
 - title: Milhouse Doesn't Live Here Anymore
@@ -134,6 +145,7 @@ episodes:
   disneyplus_id: 7528e5f7-8bf0-4c91-bedb-2305c37a868a
   simpsonsworld_id: 227392067706
   good: true
+  guest_stars:
   characters:
 - title: Smart and Smarter
   season: 15
@@ -143,6 +155,7 @@ episodes:
   disneyplus_id: 1139d006-99a7-48f6-9f52-fdebfaac820d
   simpsonsworld_id: 229331523584
   good: true
+  guest_stars:
   characters:
     - lisa
 - title: The Ziff Who Came to Dinner
@@ -153,6 +166,7 @@ episodes:
   disneyplus_id: 82113640-5626-4a70-822c-f8f608aa869d
   simpsonsworld_id: 227426371786
   good: true
+  guest_stars:
   characters:
     - homer
     - artie
@@ -165,6 +179,7 @@ episodes:
   disneyplus_id: 9fabb30c-119f-43a6-bbf6-747c2d9c3a7d
   simpsonsworld_id: 227399235673
   good: false
+  guest_stars:
   characters:
     - homer
     - marge
@@ -176,6 +191,7 @@ episodes:
   disneyplus_id: 6fc62065-18ae-4751-a441-f8f1fe016693
   simpsonsworld_id: 227402307606
   good: true
+  guest_stars:
   characters:
     - bart
 - title: My Big Fat Geek Wedding
@@ -186,6 +202,7 @@ episodes:
   disneyplus_id: 6a0af6db-2725-4782-bf06-813dbfe5cbfa
   simpsonsworld_id: 227423299561
   good: false
+  guest_stars:
   characters:
     - skinner
     - edna
@@ -198,6 +215,7 @@ episodes:
   disneyplus_id: 91fa3c12-3d04-473c-9641-d371e41d0bc7
   simpsonsworld_id: 227415619717
   good: false
+  guest_stars:
   characters:
     - simpsons
 - title: Simple Simpson
@@ -208,6 +226,7 @@ episodes:
   disneyplus_id: d4bd306d-4700-4d5d-bfa6-9987b68ec982
   simpsonsworld_id: 227327555884
   good: false
+  guest_stars:
   characters:
     - homer
     - mr_burns
@@ -220,6 +239,7 @@ episodes:
   disneyplus_id: 5bd69f8d-d191-4586-87ec-0730bfcf2e47
   simpsonsworld_id: 227330115859
   good: false
+  guest_stars:
   characters:
     - homer
     - marge
@@ -231,6 +251,7 @@ episodes:
   disneyplus_id: 88247ea9-a5dd-4a76-9b27-57c807db9116
   simpsonsworld_id: 227410499679
   good: false
+  guest_stars:
   characters:
     - simpsons
 - title: Fraudcast News
@@ -242,6 +263,7 @@ episodes:
   disneyplus_id: 500ac3a9-3fd3-4318-8606-2b1132f7ac2d
   simpsonsworld_id: 227405379707
   good: true
+  guest_stars:
   characters:
     - lisa
     - mr_burns
