--- a/episodes/season_19.yml
+++ b/episodes/season_19.yml
@@ -8,6 +8,7 @@ episodes:
   disneyplus_id: cfb4a65d-9894-49a4-a3cd-8a69d5d2e27e
   simpsonsworld_id: 292943427892
   good: false
+  guest_stars:
   characters:
     - homer
 - title: Homer of Seville
@@ -18,6 +19,7 @@ episodes:
   disneyplus_id: 29d746b8-c00f-4017-a385-e7439147f115
   simpsonsworld_id: 350651459856
   good: false
+  guest_stars:
   characters:
     - homer
 - title: Midnight Towboy
@@ -28,6 +30,7 @@ episodes:
   disneyplus_id: 3aabd561-93f2-4cab-acdf-c2e8f4adc3f8
   simpsonsworld_id: 292968003585
   good: maybe
+  guest_stars:
   characters:
     - homer
     - marge
@@ -40,6 +43,7 @@ episodes:
   disneyplus_id: f5ba0aac-38a1-41f2-a749-87292f0f6ec8
   simpsonsworld_id: 310455875747
   good: maybe
+  guest_stars:
   characters:
     - marge
 - title: Treehouse of Horror XVIII
@@ -51,6 +55,7 @@ episodes:
   disneyplus_id: e3918111-7db4-4a22-a335-fa3a24ec2545
   simpsonsworld_id: 302852163741
   good: false
+  guest_stars:
   characters:
     - treehouse_of_horror
 - title: Little Orphan Millie
@@ -62,6 +67,7 @@ episodes:
   disneyplus_id: 6904d6d9-3499-4cc5-a61f-91ad2d3805f7
   simpsonsworld_id: 302855747799
   good: maybe
+  guest_stars:
   characters:
 - title: Husbands and Knives
   season: 19
@@ -72,6 +78,7 @@ episodes:
   disneyplus_id: 12049833-9d7d-4442-877c-5d2cb51d63e7
   simpsonsworld_id: 294772803561
   good: maybe
+  guest_stars:
   characters:
 - title: Funeral for a Fiend
   season: 19
@@ -82,6 +89,7 @@ episodes:
   disneyplus_id: 63ecb9f3-2160-4fa4-a70a-e4b969f3a541
   simpsonsworld_id: 310458947589
   good: maybe
+  guest_stars:
   characters:
 - title: Eternal Moonshine of the Simpson Mind
   season: 19
@@ -92,6 +100,7 @@ episodes:
   disneyplus_id: d0790333-bd60-4a6c-bc3a-f81924537052
   simpsonsworld_id: 302847555877
   good: maybe
+  guest_stars:
   characters:
 - title: E. Pluribus Wiggum
   season: 19
@@ -101,6 +110,7 @@ episodes:
   disneyplus_id: 04b3942a-b531-45e1-820c-c8b1447affd9
   simpsonsworld_id: 307179075535
   good: maybe
+  guest_stars:
   characters:
 - title: That 90's Show
   season: 19
@@ -110,6 +120,7 @@ episodes:
   disneyplus_id: 496a92e0-6d0f-4b93-874a-6466ceb46185
   simpsonsworld_id: 299664963588
   good: maybe
+  guest_stars:
   characters:
 - title: Love, Springfieldian Style
   season: 19
@@ -120,6 +131,7 @@ episodes:
   disneyplus_id: cb1aece7-21a5-4ff0-93a1-be32ff6b6454
   simpsonsworld_id: 310471235766
   good: maybe
+  guest_stars:
   characters:
 - title: The Debarted
   season: 19
@@ -129,6 +141,7 @@ episodes:
   disneyplus_id: 6ec0564f-066c-4db8-9c0b-525fb045760c
   simpsonsworld_id: 302849603730
   good: maybe
+  guest_stars:
   characters:
 - title: Dial 'N' for Nerder
   season: 19
@@ -138,6 +151,7 @@ episodes:
   disneyplus_id: acde483e-f4e3-45f8-b751-cb9096b35221
   simpsonsworld_id: 302849091724
   good: maybe
+  guest_stars:
   characters:
 - title: Smoke on the Daughter
   season: 19
@@ -147,6 +161,7 @@ episodes:
   disneyplus_id: 811e0263-04e6-439d-b44d-b5e8ed1b40bd
   simpsonsworld_id: 310477379554
   good: maybe
+  guest_stars:
   characters:
 - title: Papa Don't Leech
   season: 19
@@ -156,6 +171,7 @@ episodes:
   disneyplus_id: 59529fea-4dd3-40fb-82ba-f6fac7ae816a
   simpsonsworld_id: 283768387739
   good: maybe
+  guest_stars:
   characters:
 - title: Apocalypse Cow
   season: 19
@@ -165,6 +181,7 @@ episodes:
   disneyplus_id: 1a63a3b9-4b72-4e3f-80d8-bf00d962ab72
   simpsonsworld_id: 302847555768
   good: maybe
+  guest_stars:
   characters:
 - title: Any Given Sundance
   season: 19
@@ -175,6 +192,7 @@ episodes:
   disneyplus_id: 160f68fb-5e93-4905-8721-fdb30ac750ab
   simpsonsworld_id: 283769923976
   good: maybe
+  guest_stars:
   characters:
 - title: Mona Leaves-a
   season: 19
@@ -184,6 +202,7 @@ episodes:
   disneyplus_id: 6b46ca89-e6d0-43d8-8e18-cab6a8c392b4
   simpsonsworld_id: 299670083511
   good: maybe
+  guest_stars:
   characters:
 - title: All About Lisa
   season: 19
@@ -194,4 +213,5 @@ episodes:
   disneyplus_id: 1ac6f2b6-a083-4be3-aa46-9d5e185c1451
   simpsonsworld_id: 294774851723
   good: maybe
+  guest_stars:
   characters:
