--- a/episodes/season_26.yml
+++ b/episodes/season_26.yml
@@ -7,6 +7,7 @@ episodes:
   disneyplus_id: 254b91ea-02ed-4b16-aa4e-03b594b89288
   simpsonsworld_id: 334920771636
   good: false
+  guest_stars:
   characters:
     - krusty
 - title: The Wreck of the Relationship
@@ -16,6 +17,7 @@ episodes:
   disneyplus_id: 6a793d21-929a-410a-8615-3f4444970e19
   simpsonsworld_id: 346737219924
   good: false
+  guest_stars:
   characters:
     - bart
     - homer
@@ -26,6 +28,7 @@ episodes:
   disneyplus_id: c8a58eb9-dbab-471a-86b3-a04bc34c2cff
   simpsonsworld_id: 340536899599
   good: false
+  guest_stars:
   characters:
     - marge
 - title: Treehouse of Horror XXV
@@ -36,6 +39,7 @@ episodes:
   disneyplus_id: 54d99d91-e952-4ff5-baf8-9eef1a054885
   simpsonsworld_id: 344255555880
   good: false
+  guest_stars:
   characters:
     - treehouse_of_horror
 - title: Opposites-A-Frack
@@ -46,6 +50,7 @@ episodes:
   disneyplus_id: 0d02c072-ec15-4e51-b0eb-b0a8c683abd7
   simpsonsworld_id: 351437379941
   good: false
+  guest_stars:
   characters:
     - mr_burns
     - homer
@@ -56,6 +61,7 @@ episodes:
   disneyplus_id: 4374e696-9cb9-4e95-b906-e623ad31593a
   simpsonsworld_id: 355593283530
   good: false
+  guest_stars:
   characters:
     - simpsons
 - title: Blazed and Confused
@@ -66,6 +72,7 @@ episodes:
   disneyplus_id: 34716532-5c16-4b0a-97fd-d71a2807f87a
   simpsonsworld_id: 359228483622
   good: false
+  guest_stars:
   characters:
     - bart
 - title: Covercraft
@@ -75,6 +82,7 @@ episodes:
   disneyplus_id: a1ed36d5-3086-49b8-b83e-2d20e72fa12b
   simpsonsworld_id: 362239555757
   good: false
+  guest_stars:
   characters:
     - homer
     - apu
@@ -85,6 +93,7 @@ episodes:
   disneyplus_id: 16914d01-b98b-4cf2-8904-36bd8f651e8f
   simpsonsworld_id: 368212547872
   good: false
+  guest_stars:
   characters:
     - homer
     - marge
@@ -95,6 +104,7 @@ episodes:
   disneyplus_id: ea171ef8-0dab-48f9-bec1-491775080bc4
   simpsonsworld_id: 379818563729
   good: maybe
+  guest_stars:
   characters:
 - title: Bart's New Friend
   season: 26
@@ -103,6 +113,7 @@ episodes:
   disneyplus_id: b30df722-986c-46ba-8e51-be92095b6e17
   simpsonsworld_id: 383002179865
   good: maybe
+  guest_stars:
   characters:
 - title: The Musk Who Fell to Earth
   season: 26
@@ -111,6 +122,7 @@ episodes:
   disneyplus_id: 2ee937da-4304-4ca5-868d-472e189d942d
   simpsonsworld_id: 388773443652
   good: maybe
+  guest_stars:
   characters:
 - title: Walking Big and Tall
   season: 26
@@ -119,6 +131,7 @@ episodes:
   disneyplus_id: 645c035f-4f8f-4422-884e-333889eae9f4
   simpsonsworld_id: 395694659511
   good: maybe
+  guest_stars:
   characters:
 - title: My Fare Lady
   season: 26
@@ -127,6 +140,7 @@ episodes:
   disneyplus_id: ff549ddd-2534-4769-9c8e-940e46363649
   simpsonsworld_id: 399385667625
   good: maybe
+  guest_stars:
   characters:
 - title: The Princess Guide
   season: 26
@@ -135,6 +149,7 @@ episodes:
   disneyplus_id: 77a22172-c5a9-4c80-b5ff-3d8fe21ecc3b
   simpsonsworld_id: 406163011894
   good: maybe
+  guest_stars:
   characters:
 - title: Sky Police
   season: 26
@@ -143,6 +158,7 @@ episodes:
   disneyplus_id: 7571103b-40e7-4456-80b6-4d1856bc73b0
   simpsonsworld_id: 410018371522
   good: maybe
+  guest_stars:
   characters:
 - title: Waiting for Duffman
   season: 26
@@ -152,6 +168,7 @@ episodes:
   disneyplus_id: 8a3b1f5a-338d-4a7c-afcf-e3bb3933d0bb
   simpsonsworld_id: 420981315819
   good: maybe
+  guest_stars:
   characters:
 - title: Peeping Mom
   season: 26
@@ -161,6 +178,7 @@ episodes:
   disneyplus_id: 7570ff99-2fd0-47a3-b275-404c5b96cc10
   simpsonsworld_id: 430426691868
   good: maybe
+  guest_stars:
   characters:
 - title: The Kids Are All Fight
   season: 26
@@ -171,6 +189,7 @@ episodes:
   disneyplus_id: 240cf703-b203-40ce-83b3-150fa2bc7b06
   simpsonsworld_id: 434682947703
   good: maybe
+  guest_stars:
   characters:
 - title: Let's Go Fly A Coot
   season: 26
@@ -180,6 +199,7 @@ episodes:
   disneyplus_id: 6398510e-4e51-4a48-a538-5781de70918b
   simpsonsworld_id: 438408259807
   good: false
+  guest_stars:
   characters:
     - grandpa_simpson
     - bart
@@ -191,6 +211,7 @@ episodes:
   disneyplus_id: 677ab214-4cde-4a05-8767-369f7a59be8c
   simpsonsworld_id: 442879555692
   good: maybe
+  guest_stars:
   characters:
 - title: Mathlete's Feat
   season: 26
@@ -200,4 +221,5 @@ episodes:
   disneyplus_id: ee46a17f-b96f-4db1-b8bf-0e25d09f9a59
   simpsonsworld_id: 446649411760
   good: maybe
+  guest_stars:
   characters:
