--- a/episodes/season_28.yml
+++ b/episodes/season_28.yml
@@ -7,6 +7,7 @@ episodes:
   disneyplus_id: 27983e4e-5a9b-49a6-ad4d-773b53d6dbc5
   simpsonsworld_id: 1066704963871
   good: false
+  guest_stars:
   characters:
     - mr_burns
     - lisa
@@ -19,6 +20,7 @@ episodes:
   disneyplus_id: c5ae8a57-bdea-435b-b4c7-4febd43dfc33
   simpsonsworld_id: 1064038980002
   good: false
+  guest_stars:
   characters:
     - homer
     - mr_burns
@@ -31,6 +33,7 @@ episodes:
   disneyplus_id: c7350a7a-9a33-48db-a40f-3b8b7893b677
   simpsonsworld_id: 1064043075512
   good: false
+  guest_stars:
   characters:
     - simpsons
 - title: Treehouse of Horror XXVII
@@ -42,6 +45,7 @@ episodes:
   disneyplus_id: 424f6c55-dd37-4443-8ca3-0504f0cbc8b7
   simpsonsworld_id: 1063870531930
   good: false
+  guest_stars:
   characters:
     - treehouse_of_horror
 - title: Trust but Clarify
@@ -52,6 +56,7 @@ episodes:
   disneyplus_id: 8633fa65-033e-4548-8c55-f65d0f1c633e
   simpsonsworld_id: 1064042051872
   good: maybe
+  guest_stars:
   characters:
 - title: There Will Be Buds
   season: 28
@@ -61,6 +66,7 @@ episodes:
   disneyplus_id: 21ac2b78-d86b-49cf-8def-e73e7d3feb7d
   simpsonsworld_id: 1064041539874
   good: maybe
+  guest_stars:
   characters:
 - title: Havana Wild Weekend
   season: 28
@@ -70,6 +76,7 @@ episodes:
   disneyplus_id: 86be2b24-f4ea-48ac-af2d-e03665f8c542
   simpsonsworld_id: 1064044099513
   good: maybe
+  guest_stars:
   characters:
 - title: Dad Behavior
   season: 28
@@ -79,6 +86,7 @@ episodes:
   disneyplus_id: 6122d981-dab6-448a-b5e2-8e045d49a1cb
   simpsonsworld_id: 1064046147533
   good: maybe
+  guest_stars:
   characters:
 - title: The Last Traction Hero
   season: 28
@@ -89,6 +97,7 @@ episodes:
   disneyplus_id: de1d1646-e66b-40fe-b949-8982a7d54a1d
   simpsonsworld_id: 1064046147517
   good: maybe
+  guest_stars:
   characters:
 - title: The Nightmare After Krustmas
   season: 28
@@ -98,6 +107,7 @@ episodes:
   disneyplus_id: 596be041-df7a-4f32-9209-f8734a20bf70
   simpsonsworld_id: 1064045635565
   good: maybe
+  guest_stars:
   characters:
 - title: Pork and Burns
   season: 28
@@ -107,6 +117,7 @@ episodes:
   disneyplus_id: e599bf8f-3846-4fc7-9ab9-a526ecd27ca6
   simpsonsworld_id: 1070436931706
   good: maybe
+  guest_stars:
   characters:
 - title: Fatzcarraldo
   season: 28
@@ -117,6 +128,7 @@ episodes:
   disneyplus_id: 6c1936c3-80d3-4ca5-8439-c2b86226f8a1
   simpsonsworld_id: 1064044611770
   good: maybe
+  guest_stars:
   characters:
 - title: The Cad and the Hat
   season: 28
@@ -126,6 +138,7 @@ episodes:
   disneyplus_id: 5f3df5ed-6614-4cb8-9db6-355f12fade31
   simpsonsworld_id: 1064044611752
   good: maybe
+  guest_stars:
   characters:
 - title: Kamp Krustier
   season: 28
@@ -135,6 +148,7 @@ episodes:
   disneyplus_id: d455a9c4-d285-4430-b651-90c922210560
   simpsonsworld_id: 1064043587996
   good: maybe
+  guest_stars:
   characters:
 - title: 22 for 30
   season: 28
@@ -143,6 +157,7 @@ episodes:
   disneyplus_id: 46ee771c-180a-457c-9681-7b4aa32ad4ec
   simpsonsworld_id: 1064044099732
   good: maybe
+  guest_stars:
   characters:
 - title: A Father's Watch
   season: 28
@@ -152,6 +167,7 @@ episodes:
   disneyplus_id: 9fd603e4-7497-4267-8d3e-1650797237ee
   simpsonsworld_id: 1064046659528
   good: maybe
+  guest_stars:
   characters:
 - title: The Caper Chase
   season: 28
@@ -161,6 +177,7 @@ episodes:
   disneyplus_id: cc29a4a0-2c0f-4a33-a26b-942f5f56c788
   simpsonsworld_id: 1064044611790
   good: maybe
+  guest_stars:
   characters:
 - title: Looking for Mr. Goodbart
   season: 28
@@ -169,6 +186,7 @@ episodes:
   disneyplus_id: c1f79df3-116d-4923-859a-a1a964292108
   simpsonsworld_id: 1064046659522
   good: maybe
+  guest_stars:
   characters:
 - title: Moho House
   season: 28
@@ -177,6 +195,7 @@ episodes:
   disneyplus_id: f58f69c0-5491-493f-a4b5-46dbff81cebe
   simpsonsworld_id: 1064045635817
   good: maybe
+  guest_stars:
   characters:
 - title: Dogtown
   season: 28
@@ -185,6 +204,7 @@ episodes:
   disneyplus_id: 4a803d13-d79f-4a75-aaee-672938754207
   simpsonsworld_id: 1064045635799
   good: maybe
+  guest_stars:
   characters:
 - title: The Great Phatsby Parts 1 & 2
   season: 28
@@ -195,4 +215,5 @@ episodes:
   disneyplus_id: 182e12e3-8818-4bd4-9245-313f1fd2ce94
   simpsonsworld_id: 1077274179891
   good: maybe
+  guest_stars:
   characters:
