--- a/episodes/season_31.yml
+++ b/episodes/season_31.yml
@@ -7,6 +7,7 @@ episodes:
   disneyplus_id: ca497a6c-9cac-4e92-91a4-af95a82d5680
   simpsonsworld_id:
   good: false
+  guest_stars:
   characters:
     - homer
     - bart
@@ -17,6 +18,7 @@ episodes:
   disneyplus_id: 523a90e8-f4fd-40c2-977a-9929b423319d
   simpsonsworld_id:
   good: false
+  guest_stars:
   characters:
     - homer
 - title: The Fat Blue Line
@@ -26,6 +28,7 @@ episodes:
   disneyplus_id: 78b1bbea-6468-464c-a94f-5ef375db4c7b
   simpsonsworld_id:
   good: false
+  guest_stars:
   characters:
     - fat_tony
     - wiggum
@@ -36,6 +39,7 @@ episodes:
   disneyplus_id: bf3b47dd-1e1d-41b2-b11b-1b6d5434d23b
   simpsonsworld_id:
   good: false
+  guest_stars:
   characters:
     - treehouse_of_horror
 - title: Gorillas on the Mast
@@ -45,6 +49,7 @@ episodes:
   disneyplus_id: 3915e644-5757-4bbe-a9f8-02bdadc080be
   simpsonsworld_id:
   good: false
+  guest_stars:
   characters:
     - homer
     - lisa
@@ -55,6 +60,7 @@ episodes:
   disneyplus_id: 604833fa-ba0e-49cd-9f45-6704aaeee7da
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: "Livin' la Pura Vida"
   season: 31
@@ -63,6 +69,7 @@ episodes:
   disneyplus_id: 4109ff3d-6c74-41af-bfc9-5e7582b0dd40
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: Thanksgiving of Horror
   season: 31
@@ -71,6 +78,7 @@ episodes:
   disneyplus_id: ea3e5e5a-ce1c-40c1-9c03-d3beae6800e6
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: Todd, Todd, Why Hast Thou Forsaken Me?
   season: 31
@@ -79,6 +87,7 @@ episodes:
   disneyplus_id: dfc9fb50-95ca-4ccd-ab78-52f99bc63f94
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: Bobby, It's Cold Outside
   season: 31
@@ -87,6 +96,7 @@ episodes:
   disneyplus_id: 887a8249-45d2-4648-bf8f-857068bc51ec
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: Hail to the Teeth
   season: 31
@@ -95,6 +105,7 @@ episodes:
   disneyplus_id: e790d895-efe3-4bc6-afa5-e638f558b453
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: The Miseducation of Lisa Simpson
   season: 31
@@ -103,6 +114,7 @@ episodes:
   disneyplus_id: 26fa2ab1-13ec-4faa-934b-e153dbed8daa
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: Frinkcoin
   season: 31
@@ -111,6 +123,7 @@ episodes:
   disneyplus_id: a4af5b0e-6078-484b-a3f9-0a70245947b7
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: Bart the Bad Guy
   season: 31
@@ -119,6 +132,7 @@ episodes:
   disneyplus_id: d8e4279f-206e-4aef-ae5b-b93349effcc0
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: Screenless
   season: 31
@@ -127,6 +141,7 @@ episodes:
   disneyplus_id: 1416e154-0d9c-43db-b2c3-84359f77d64d
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: Better Off Ned
   season: 31
@@ -135,6 +150,7 @@ episodes:
   disneyplus_id: a65f610d-d2be-49fc-b6c7-c04e580af1a3
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: Highway to Well
   season: 31
@@ -143,6 +159,7 @@ episodes:
   disneyplus_id: 562d6a94-d1e1-4cca-8615-8dbbcbaf21d1
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: The Incredible Lightness of Being a Baby
   season: 31
@@ -151,6 +168,7 @@ episodes:
   disneyplus_id: f91d19d8-aeeb-4ca8-bcac-6384591148ef
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: "Warrin' Priests"
   season: 31
@@ -159,6 +177,7 @@ episodes:
   disneyplus_id: 7c6ef11c-f012-420a-95fe-27479b120221
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: "Warrin' Priests Part Two"
   season: 31
@@ -167,6 +186,7 @@ episodes:
   disneyplus_id: bb8d939d-007c-4627-8922-74a6e5cd7ef1
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: The Hateful Eight-Year-Olds
   season: 31
@@ -175,6 +195,7 @@ episodes:
   disneyplus_id: e5cbcb10-6230-4647-9df9-db1fe728931c
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
 - title: The Way of the Dog
   season: 31
@@ -183,4 +204,5 @@ episodes:
   disneyplus_id: 4e163c17-3990-4043-8439-e255f0702b0e
   simpsonsworld_id:
   good: maybe
+  guest_stars:
   characters:
